[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemigo/Enemigo.gd" type="Script" id=1]
[ext_resource path="res://enemigo/Bala_ini.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemigo/Interface-Enemy/Interface-Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/player_2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/player_3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/player_1.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.7341, 25.6051 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="Enemigo" type="KinematicBody2D" groups=[
"enemies",
]]
script = ExtResource( 1 )
tiro = ExtResource( 2 )
tempo = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.13206, -1.88677 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Move" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Interface-Enemy" parent="." instance=ExtResource( 3 )]
margin_left = -56.4759
margin_top = -63.8424
margin_right = -56.4759
margin_bottom = -63.8424

[node name="veneno" type="Timer" parent="."]

[node name="maximo" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.764706, 0.258824, 0.258824, 1 )
scale = Vector2( 3, 3 )
frames = SubResource( 2 )
animation = "idle"
__meta__ = {
"_edit_lock_": true
}
[connection signal="atualizar_vida" from="." to="Interface-Enemy" method="_on_Enemigo_atualizar_vida"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Move" to="." method="_on_Move_timeout"]
[connection signal="timeout" from="veneno" to="." method="_on_veneno_timeout"]
[connection signal="timeout" from="maximo" to="." method="_on_maximo_timeout"]
